samples/_failures_safe/1761402823_5f6d50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_481b581d.c: In function ‘main’:
./samples/SAFE/__tmp_481b581d.c:153:9: error: expected expression at end of input
  153 |         breadth_first_search,
      |         ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_481b581d.c:153:9: error: expected declaration or statement at end of input
